versioned_docs/version-1.7-rc1/versionshistorie.md
# Versionshistorie

Die Versionshistorie beschreibt die wichtigsten inhaltlichen Änderungen zwischen den veröffentlichten Versionen von Schulconnex.

Detailierte Informationen zu den Änderungen finden sich in der Historie der Github Issues und der entsprechenden Pull Requests.

# Änderungen von Version 1.6 zu Version 1.7

### Geänderte APIs
* Neuer Filter zur Ausgabe von `hat_als`-Beziehungen bei
    * /personen
    * /personen/:id/personenkontexte
    * /personenkontexte   
* Die API `personen-info` gibt keine `ist_von` Beziehungen aus
* Die API `organisationen` kann auch Organisationsbeziehungen mit ausgeben
* Bei der API `organisationen-info` wurde die Struktur der Query-Filter an `personen-info` angepasst

### Geänderte Codelisten
* Neuer Wert in Codeliste `Organisationsbeziehung`: 
    * `Medienzentrum`

### Sonstiges
* Praxisleitfaden Aufruf eines Mediums über ein Medienregal
* Informationen zur Gewährleistung von Datenschutzzielen durch Schulconnex

## Änderungen von Version 1.5.1 zu Version 1.6

### Nutzungsrechte-API
* Neue Rubrik Nutzungsrechte hinzugefügt:
     *  Allgemeines
     *  Nutzung der REST-API
     *  Praxisleitfaden Nutzungsrechte mit ODRL
     *  API Nutzungsrechte: 
         * /policies-info

### Geänderte Datenmodelle
* Attribut `bezeichnung` dem Datenmodell `Fach` hinzugefügt

### Geänderte Codelisten
* `Lokalisierung` referenziert direkt RFC 5646 und nutzt keine eigene Codeliste mehr
* Codeliste `Organisationstyp` hat drei neue Werte: 
    * `Medienzentrum`
    * `Behoerde`
    * `SchTrae (Schulträger)`

## Änderungen von Version 1.5 zu Version 1.5.1

### Allgemeines

* Verbesserte Gliederung der Webseite
* Kennzeichnung der Teile der Spezifikation als verbindlich oder informativ
* Sprachliche Verbesserungen

## Änderungen von Version 1.4 zu Version 1.5

### Allgemeines

* Regeln für herstellereigene Attribute definiert

### Neue Datenmodelle und APIs

* API Sichtfreigabe
  * POST /personenkontexte/:id/sichtfreigaben
  * GET /personenkontexte/:id/sichtfreigaben
  * DELETE /sichtfreigaben/:id
* API Organisationen für Dienstanbieter
  * GET /organisationen-info

### Geänderte APIs

* Filterattribut `mandant` für Quellsysteme definiert
* Attribut `rufname` in das Datenmodell Person für Dienstanbieter aufgenommen
* Attribute `gruppenzugehoerigkeit.von` und `gruppenzugehoerigkeit.bis` in das Datenmodell Gruppe für Dienstanbieter aufgenommen
* Erfolgreiche `HTTP POST`-Aufrufe werden mit dem Code `201` quittiert. **Diese Änderung ist nicht rückwärtskompatibel.**

### Geänderte Codelisten

* Codeliste Rollen: Neue Rollen `SchB` (Schulbegleiter/-in) und `NLehr` (Nichtlehrendes Personal) definiert
* Codeliste Gruppenrollen: Neue Rolle `VLehr` (Vertretungslehrkraft) definiert
* Die Codeliste Gruppenoptionen enthält derzeit keine Werte
